<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".activity.SettingReminderActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/daily_remainder"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_remainder_text"
        android:gravity="left"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="8dp"
        android:text="@string/release_reminder"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/release_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/release_remainder_text" />

</LinearLayout>